Updated to do funtion, only issue to fix is the ordering of the array when an item is dropped in between to items, it pushes down an extra space.

--- a/src/styles.css
+++ b/src/styles.css
@@ -12,8 +12,34 @@
 }
 /* ---------------------------------------TitleBar-------------------------------- */
 .TitleBar {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: flex-end;
+  flex-wrap: wrap;
   background-color: white;
   font-size: 4rem;
+  padding: 10px;
+  margin: 5px 0px 5px 0px;
+  border-radius: 5px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1), 0 6px 20px rgba(0, 0, 0, 0.1);
+}
+.titleBarMyDaily {
+  font-size: 4rem;
+  font-family: "Pacifico", sans-serif;
+  font-weight: 300;
+  font-style: italic;
+  text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.5), -1px -1px 3px rgb(0, 61, 153);
+  color: rgb(0, 102, 255)
+  ;
+}
+.titleBarScrum {
+  font-size: 5rem;
+  font-family: "Archivo Black", sans-serif;
+  font-weight: 600;
+  font-style: normal;
+  text-shadow: 2px 2px 2px rgba(0, 0, 0, .7), -1px -1px 3px rgb(200, 122, 0);
+  color: rgb(255, 153, 0);
 }
 /* ---------------------------------------Modals-------------------------------- */
 
@@ -97,15 +123,15 @@
   margin-bottom: 5px;
 }
 .task-edit-save-button:hover {
-  color: blue;
-  border-bottom: 2px solid blue;
+  color: rgb(0, 102, 255);
+  border-bottom: 2px solid rgb(0, 102, 255);
   border-radius: 0px;
 }
 /* ---------------------------------------TaskPanel-------------------------------- */
 .task-panel-container {
   display: flex;
   flex-direction: column;
-  border: 2px solid black;
+  justify-content: center;
 }
 .task-panel-header {
   display: flex;
@@ -115,6 +141,8 @@
   background-color: white;
   font-size: 4rem;
   border-bottom: 2px solid black;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1), 0 6px 20px rgba(0, 0, 0, 0.1);
+
 }
 .task-panel {
   display: flex;
@@ -123,9 +151,8 @@
   justify-content: space-around;
   align-items: flex-start;
   flex-wrap: wrap;
-  border: 2px solid black;
 }
-@media (max-width: 500px) {
+@media (max-width: 750px) {
   .task-panel {
     flex-direction: column; /* Stacks the items vertically */
     justify-content: center;
@@ -135,30 +162,49 @@
 .task-panel-content {
   background-color: white;
   border: 2px solid black;
+  border-radius: 3px;
   margin: 10px;
   padding: 10px;
   min-height: 35vh;
   word-wrap: break-word;
   max-width: 33%;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1), 0 6px 20px rgba(0, 0, 0, 0.1);
+
 }
-@media (max-width: 500px) {
+@media (max-width: 750px) {
   .task-panel-content {
     min-height: 20vh;
+    max-width: 100%;
     flex-direction: column; /* Stacks the items vertically */
     justify-content: center;
     align-items: center;
   }
 }
 .task-panel-content-title {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  padding: 10px;
   background-color: white;
   font-size: 3rem;
+  font-family: "Playwrite CU", sans-serif;
+  font-style: italic;
+  text-shadow: 2px 2px 2px rgba(0, 0, 0, .2);
   border-bottom: 2px solid black;
+  padding-bottom: 3px;
+  white-space: nowrap;
+  width: 100%;
+  max-width: 100%;
+  box-sizing: border-box;
+  /* text-overflow: ellipsis; */
 }
 .task-item {
   display: flex;
   flex-direction: column;
   background-color: white;
   border-bottom: 2px solid black;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1), 0 6px 20px rgba(0, 0, 0, 0.1);
   border-right: 2px solid transparent;
   border-left: 2px solid transparent;
   border-top: 2px solid transparent;
@@ -171,11 +217,10 @@
   cursor: pointer;
   border: 2px solid red;
   border-radius: 5px;
-
+  opacity: 0.7;
 }
 .task.item:active {
-  opacity: 0.7;
-  border: 2px solid green;
+  opacity: 0;
 }
 .task-item-text-box {
   min-width: 50%;
@@ -192,7 +237,7 @@
   margin-right: 10px;
 }
 .task-item-edit:hover {
-  color: blue;
+  color: rgb(0, 102, 255);
 }
 .task-item-delete {
   cursor: pointer;
@@ -206,11 +251,13 @@
 }
 .drop-area {
   background-color: white;
-  border: 2px dashed #dcdcdc;
+  color: #000;
+  border: 3px dashed #000;
   columns: #dcdcdc;
   margin-bottom: 15px;
   padding: 15px;
-  opacity: 1;
+  margin: 5px;
   max-width: 100%;
   transition: all 0.1s ease-in-out;
+  opacity: 0.5;
 }
